[project]
name = "readlex"
version = "0.1.0"
description = "Auto-transliteration of English language text from latin to Shaw script using the Read Lexicon"
authors = [
    { name = "Shavian-info", email = "contact@shavian.info" },
    { name = "Ingrid", email = "git@ingrids.email" }
]
dependencies = [
    "spacy>=3.7.4",
    "unidecode>=1.3.8",
    "smartypants>=2.0.1",
    "bs4>=0.0.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "typed-argument-parser>=1.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"
exclude = [
    "readlex.json",
    "kingsleyreadlexicon.tsv",
    "readlex.dict",
    "addendum.dict"
]

[project.scripts]
latin2shaw = "readlex.latin2shaw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/readlex"]
